cicd/kubernetes/data-fetcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-fetcher
  labels:
    app: data-fetcher
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-fetcher
  template:
    metadata:
      name: data-fetcher
      labels:
        app: data-fetcher
    spec:
      containers:
        - name: data-fetcher
          image: tr0yyy/f1-prediction-python-data-fetcher
          ports:
              - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
