cicd/kubernetes/mongodb-predictions-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-predictions-service
  labels:
    app: mongodb-predictions-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-predictions-service
  template:
    metadata:
      name: mongodb-predictions-service
      labels:
        app: mongodb-predictions-service
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
          livenessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: data
          hostPath:
            path: /var/lib/mongodb-predictions-service
