cicd/kubernetes/nginx-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-frontend
  labels:
    app: nginx-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-frontend
  template:
    metadata:
      name: nginx-frontend
      labels:
        app: nginx-frontend
    spec:
      containers:
        - name: nginx
          image: tr0yyy/f1-prediction-python-nginx-frontend
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
