cicd/kubernetes/race-simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: race-simulator
  labels:
    app: race-simulator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: race-simulator
  template:
    metadata:
      name: race-simulator
      labels:
        app: race-simulator
    spec:
      containers:
        - name: race-simulator
          image: tr0yyy/f1-prediction-python-race-simulator
          ports:
              - containerPort: 8002
          livenessProbe:
            httpGet:
              path: /health/
              port: 8002
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
