cicd/kubernetes/mongodb-predictions-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-predictions-service
spec:
  selector:
    app: mongodb-predictions-service
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
