cicd/kubernetes/mongodb-race-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-race-simulator
spec:
  selector:
    app: mongodb-race-simulator
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
