cicd/kubernetes/nginx-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend
spec:
  selector:
    app: nginx-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
