cicd/kubernetes/predictions-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictions-service
spec:
  selector:
    app: predictions-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
