cicd/kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      name: amqp
      port: 5672
      targetPort: 5672
    - protocol: TCP
      name: management
      port: 15672
      targetPort: 15672
  type: NodePort
