cicd/kubernetes/race-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: race-simulator
spec:
  selector:
    app: race-simulator
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
